--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Alura</a>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    
+                    <img src="img/alura-amarelo.svg" height="30" width="140"/>
+                </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
