--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Vagas</h2>
-                    <h3 class="section-subheading text-muted">Quer fazer parte da equipe? Escolha sua vaga favorita e resolva o desafio!</h3>
+                    <h3 class="section-subheading text-muted">Quer fazer parte da equipe? Escolha sua vaga favorita e participe do processo de seleção!</h3>
                 </div>
             </div>
             <div class="row">
@@ -225,7 +225,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contato</h2>
-                    <h3 class="section-subheading text-muted">Envie seu projeto agora mesmo para <a href="">mauricio.aniche@alura.com.br</a>.</h3>
+                    <h3 class="section-subheading text-muted">Entre em contato agora mesmo em <a href="">mauricio.aniche@alura.com.br</a>.</h3>
                 </div>
             </div>
         </div>
