--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Alura - Vagas de desenvolvimento</title>
+    <title>Alura - Sua carreira conosco</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">A revolução da educação!</div>
-                <div class="intro-heading">Revolucione sua carreira e o Brasil.</div>
+                <div class="intro-heading">Revolucione sua carreira e o Brasil</div>
                 <a href="#diadia" class="page-scroll btn btn-xl">Quero trabalhar no Alura</a>
             </div>
         </div>
@@ -183,11 +183,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Edição de vídeo</h4>
-                                    <h4 class="subheading">Estagiário</h4>
+                                    <h4>Marketing digital</h4>
+                                    <h4 class="subheading">Professor</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Temos hoje 1500 vídeo aulas, e vamos crescer muito mais! Que tal usar sua criatividade para editar os vídeos mais legais de tecnologia do Brasil?</p>
+                                    <p class="text-muted">Interessado em mudar a maneira de ensino na sua área? Aprenda a nossa didática e ajude-nos a não ensinar só a teoria do marketing digital, nem só a prática das ferramentas, mas sim capacitar o aluno a pensar por si mesmo.</p>
                                 </div>
                             </div>
                         </li>
@@ -225,7 +225,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contato</h2>
-                    <h3 class="section-subheading text-muted">Entre em contato agora mesmo em <a href="">mauricio.aniche@alura.com.br</a>.</h3>
+                    <h3 class="section-subheading text-muted">Interesse em vaga de professor? <a href="https://gist.github.com/guilhermesilveira/6e98cafbf361cd21b436">Inicie agora mesmo o processo.</a>.</h3>
+                    <h3 class="section-subheading text-muted">Outras vagas? <a href="mailto:mauricio.aniche@alura.com.br">Entre em contato</a> agora mesmo.</h3>
                 </div>
             </div>
         </div>
