--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -151,7 +151,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -179,7 +179,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -206,6 +206,21 @@
                             </div>
                         </li>
 
+                        <li  class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Desenvolvedor</h4>
+                                    <h4 class="subheading">Professor</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Não quer só programar? Que tal ensinar também tudo o que você sabe para os desenvolvedores de todo o Brasil? Também temos vagas!</p>
+                                </div>
+                            </div>
+                        </li>
+
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <h4>Seja parte
@@ -225,8 +240,9 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contato</h2>
-                    <h3 class="section-subheading text-muted">Interesse em vaga de professor? <a href="https://gist.github.com/guilhermesilveira/6e98cafbf361cd21b436">Inicie agora mesmo o processo.</a>.</h3>
-                    <h3 class="section-subheading text-muted">Outras vagas? <a href="mailto:mauricio.aniche@alura.com.br">Entre em contato</a> agora mesmo.</h3>
+                    <h3 class="section-subheading text-muted">Interesse em vaga de professor? <a href="https://gist.github.com/guilhermesilveira/6e98cafbf361cd21b436">Inicie agora mesmo o processo.</a>.
+                    <br/>
+                    Outras vagas? <a href="mailto:mauricio.aniche@alura.com.br">Entre em contato</a> agora mesmo.</h3>
                 </div>
             </div>
         </div>
