--- a/index.html
+++ b/index.html
@@ -135,21 +135,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Desenvolvedor Frontend</h4>
-                                    <h4 class="subheading">Estagiário</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Venha nos ajudar a melhorar ainda mais a carinha dos nossos sites, tanto o site de vendas, quanto a nossa plataforma! É hora de por a mão em muito HTML, CSS e Javascript.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
+                        <li class="timeline">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
                             </div>
@@ -163,20 +149,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Designer</h4>
-                                    <h4 class="subheading">Estagiário</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Que tal bolar capas de livros, banners para newsletters, pensar na UX da nossa plataforma, e melhorar a vida dos nossos alunos?!</p>
-                                </div>
-                            </div>
-                        </li>
+
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
@@ -191,22 +164,9 @@
                                 </div>
                             </div>
                         </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Design Web</h4>
-                                    <h4 class="subheading">Professor</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Você conhece muito no design para web? Que tal passar esse conhecimento para frente? Venha fazer parte da equipe de professores do Alura, e ensinar design para milhares de pessoas.</p>
-                                </div>
-                            </div>
-                        </li>
 
-                        <li  class="timeline-inverted">
+
+                        <li  class="timeline">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
                             </div>
