--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <h2 class="section-heading">Contato</h2>
                     <h3 class="section-subheading text-muted">Interesse em vaga de professor? <a href="https://gist.github.com/guilhermesilveira/6e98cafbf361cd21b436">Inicie agora mesmo o processo.</a>.
                     <br/>
-                    Outras vagas? <a href="mailto:mauricio.aniche@alura.com.br">Entre em contato</a> agora mesmo.</h3>
+                    Outras vagas? <a href="mailto:guilherme.silveira@alura.com.br">Entre em contato</a> agora mesmo.</h3>
                 </div>
             </div>
         </div>
